Fixing work title and margin on work page on tablet size

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -309,9 +309,14 @@
       width: 200%;
     }
   }
+}
 
-  .work-carousel-title {
-    font-size: $font-size-lg;
+@media (max-width: 633px) and (min-width: 481px) {
+  .works-sharp {
+    margin: 2.8rem;
+    .work-carousel-title {
+      font-size: $font-size-lg;
+    }
   }
 }
 
